[package]
name = "shooter"
version = "0.1.0"
authors = ["LFalch <lucas@wasd.dk>"]

[dependencies]
ggez = "0.4"
bincode = "0.9.2"
serde_derive = "~1"
serde = "~1"

[profile.dev]
opt-level = 2
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
